[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Actor/Actor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actor/Enemy/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Actor/Enemy/Gun.gd" type="Script" id=4]
[ext_resource path="res://Bullet/Bullet.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 201.435

[node name="Enemy" instance=ExtResource( 2 )]
position = Vector2( 480, 384 )
collision_mask = 16
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" parent="body" index="0"]
texture = ExtResource( 1 )

[node name="RayCast2D" parent="body/raycasts" index="0"]
position = Vector2( 32, 0 )
scale = Vector2( 2, 1.5 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="Gun" type="Node2D" parent="body" index="4"]
script = ExtResource( 4 )
bullet = ExtResource( 5 )
reload_timer = 1.0

[node name="Sprite" type="Sprite" parent="body/Gun" index="0"]
position = Vector2( 17.5, 2 )
scale = Vector2( 0.703125, 0.375 )
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="body/Gun" index="1"]
position = Vector2( 40, 0 )

[node name="Timer" type="Timer" parent="body/Gun" index="2"]

[node name="Maintimer" type="Timer" parent="." index="2"]
autostart = true

[node name="Detect area" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect area" index="0"]
shape = SubResource( 2 )
[connection signal="timeout" from="body/Gun/Timer" to="body/Gun" method="_on_Timer_timeout"]
[connection signal="timeout" from="Maintimer" to="." method="_on_Maintimer_timeout"]
[connection signal="body_entered" from="Detect area" to="." method="_on_Detect_area_body_entered"]
[connection signal="body_exited" from="Detect area" to="." method="_on_Detect_area_body_exited"]
